Add index page for Vendors view

--- a/Tracker.Solutions/Tracker/Views/Home/Index.cshtml
+++ b/Tracker.Solutions/Tracker/Views/Home/Index.cshtml
@@ -2,4 +2,6 @@
   Layout = "_Layout";
 }
 
-<h1> Welcome </h1>
+<h1> Welcome Pierre! </h1>
+
+<h3><a href='/vendors'>Click here to go to the Vendor page. From there, you can access a form to add new vendors or see info about existing vendors!</a></h3>
